--- a/buildngz_main/static/styles/style.css
+++ b/buildngz_main/static/styles/style.css
@@ -1,5 +1,3 @@
-{% load static %}
-
 @charset "UTF-8";
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
@@ -2557,11 +2555,12 @@ body,
 button,
 input,
 select,
-textarea {
+textarea,
+a {
   color: #222222;
-  font-family: "Cabin", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 14px;
-  font-size: 0.875rem;
+  /* font-size: 0.875rem; */
   font-weight: 400;
   line-height: 1.4;
 }
@@ -17163,7 +17162,7 @@ a.pswp__share--download:hover {
 
 .page-banner--layout-1 {
   padding: 120px 0 75px;
-  background-image: url("{% static 'images/uploads/buildngz-hdr.jpg'%}");
+  background-image: url("../images/uploads/buildngz-pro-vendor.jpg");
 }
 
 @media screen and (min-width: 992px) {
@@ -17196,7 +17195,7 @@ a.pswp__share--download:hover {
 
 .page-banner--layout-2 {
   padding: 120px 0;
-  background-image: url("../images/uploads/ads-bg.jpg")
+  background-image: url("../images/uploads/buildngz-hdr.jpg");
 }
 
 @media screen and (min-width: 992px) {
@@ -17250,7 +17249,7 @@ a.pswp__share--download:hover {
 
 .page-banner--layout-3 {
   padding: 100px 0;
-  background-image: url("{% static 'images/uploads/buildngz-hdr.jpg'%}");
+  background-image: url("../images/uploads/buildngz-hdr.jpg");
 }
 
 @media screen and (min-width: 992px) {
@@ -17261,7 +17260,7 @@ a.pswp__share--download:hover {
 
 .page-banner--layout-4 {
   padding: 150px 0 140px;
-  background-image: url("{% static 'images/uploads/buildngz-hdr.jpg'%}");
+  background-image: url("../images/uploads/buildngz-hdr.jpg");
 }
 
 @media screen and (min-width: 992px) {
