--- a/templates/home.html
+++ b/templates/home.html
@@ -1,117 +1,10 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Buildngz</title>
-  <link href="https://fonts.googleapis.com/css?family=Cabin:400,600" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'styles/style.css' %} ">
-</head>
-
-<body>
-<!-- #masthead -->
-<header id="masthead" class="site-header site-header--layout-2">
-  <div class="container">
-    <div class="d-lg-flex justify-content-lg-between align-items-lg-center site-header__container">
-      <div class="site-header__logo">
-        <a href="index.html">
-          <h1 class="screen-reader-text">Buildngz</h1>
-          <img src="{% static 'images/buildngz-logo.png'%}" alt="Listiry">
-        </a>
-      </div>
-      <!-- .site-header__logo -->
-      <div class="d-lg-flex align-items-lg-center">
-        <ul class="min-list main-navigation">
-          <li>
-            <a href="#">GET IDEAS</a>
-            <ul class="min-list">
-              <li>
-                <a href="listing-4.html">Architecture</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Interior Design</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Landscaping</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Kitched Design</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Software</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">SHOP BY DEPARTMENT</a>
-            <ul class="min-list">
-              <li>
-                <a href="listing-4.html">Architecture</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Construction</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Fire Remediation</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Landscaping</a>
-              </li>
-              <li>
-                <a href="listing-4.html">Building Services</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">FIND PROS</a>
-            <ul class="min-list">
-              <li><a href="listing-4.html">Architects & Building Designers</a></li>
-              <li><a href="listing-4.html">Design-Build Firms</a></li>
-              <li><a href="listing-4.html">General Contractors</a></li>
-              <li><a href="listing-4.html">Home Builders</a></li>
-              <li><a href="listing-4.html">Interior Designers</a></li>
-              <li><a href="listing-4.html">Kitchen & Bath Designers</a></li>
-              <li><a href="listing-4.html">Kitchen & Bath Remodelers</a></li>
-              <li><a href="listing-4.html">Landscape Architects & Designers</a></li>
-              <li><a href="listing-4.html">Landscape Contractors</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="blog.html">BLOG</a>
-          </li>
-        </ul><!-- .main-navigation -->
-
-        <div class="user-action">
-          <a href="login.html" class="sign-in">
-            <i class="fa fa-user"></i>
-            Sign in
-          </a>
-          <a href="signup.html" class="sign-in">
-          <button class="button button--small button--pill button--primary d-none d-lg-inline-block">&plus; Join as a Pro</button></a>
-        </div>
-      </div>
-
-      <div class="d-lg-none nav-mobile">
-        <a href="#" class="nav-toggle js-nav-toggle nav-toggle--dove-gray">
-          <span></span>
-        </a>
-        <!-- .nav-toggle -->
-      </div>
-      <!-- .nav-mobile -->
-
-    </div>
-    <!-- .site-header__container -->
-
-  </div>
-  <!-- .container -->
-</header>
-<!-- #masthead -->
-
+{% block content %}
 <!-- .page-banner -->
-<section class="page-banner page-banner--layout-3 parallax">
+
+<section class="page-banner page-banner--layout-3" >
   <div class="container">
     <div class="page-banner__container animated zoomIn">
       <div class="page-banner__textcontent t-center">
@@ -159,7 +52,7 @@
 </section><!-- .page-banner -->
 
 <!-- .ads -->
-<section class="ads ads--layout-2 parallax">
+<section class="ads  parallax">
   <div class="t-center ads__container">
     <div class="container">
       <div class="row">
@@ -187,7 +80,7 @@
     <p class="page-section__subtitle t-center c-boulder">Locate the services and professionals for your project</p>
 
     <div class="dream-places__wrapper">
-      <div class="dream-place" style="background-image: url('{% static 'images/uploads/architecture.jpg' %}')">
+      <div class="dream-place" style="background-image: url({% static 'images/uploads/architecture.jpg' %})">
         <a href="#">
           <div class="dream-place__inner">
             <h3 class="dream-place__title c-white">Architecture</h3>
@@ -195,7 +88,7 @@
         </a>
       </div><!-- .dream-place -->
 
-      <div class="dream-place" style="background-image: url('{% static 'images/uploads/space-plan.jpg' %}')">
+      <div class="dream-place" style="background-image: url({% static 'images/uploads/space-plan.jpg' %})">
         <a href="#">
           <div class="dream-place__inner">
             <h3 class="dream-place__title c-white">Space Planning</h3>
@@ -203,7 +96,7 @@
         </a>
       </div><!-- .dream-place -->
 
-      <div class="dream-place" style="background-image: url('{% static 'images/uploads/constr-mgmt.jpg' %}')">
+      <div class="dream-place" style="background-image: url({% static 'images/uploads/constr-mgmt.jpg' %})">
         <a href="#">
           <div class="dream-place__inner">
             <h3 class="dream-place__title c-white">Construction Management</h3>
@@ -211,7 +104,7 @@
         </a>
       </div><!-- .dream-place -->
 
-      <div class="dream-place" style="background-image: url('{% static 'images/uploads/hvac.jpg' %}')">
+      <div class="dream-place" style="background-image: url({% static 'images/uploads/hvac.jpg' %})">
         <a href="#">
           <div class="dream-place__inner">
             <h3 class="dream-place__title c-white">HVAC</h3>
@@ -219,7 +112,7 @@
         </a>
       </div><!-- .dream-place -->
 
-      <div class="dream-place" style="background-image: url('{% static 'images/uploads/plumbing.jpg' %}')">
+      <div class="dream-place" style="background-image: url({% static 'images/uploads/plumbing.jpg' %})">
         <a href="#">
           <div class="dream-place__inner">
             <h3 class="dream-place__title c-white">Plumbing</h3>
@@ -554,135 +447,4 @@
     </div><!-- .row -->
   </div><!-- .container -->
 </section><!-- .news -->
-
-<!-- #footer -->
-<footer id="colophone" class="site-footer">
-
-  <div class="t-center site-footer__primary">
-    <div class="container">
-      <p class="t-small" style="text-align: left">
-      <strong>Browse Pros by Metro</strong><br>
-      Albuquerque-Atlanta-Austin-Baltimore-Birmingham-Boise-Boston-Bridgeport-Burlington-Cedar Rapids-Charleston-Charlotte-Chicago-Cincinnati-Cleveland-Columbus-Dallas-Dc Metro-Denver-Detroit-Grand Rapids-Hawaii-Houston-Huntington-Indianapolis-Jackson-Jacksonville-Kansas City-Las Vegas-Little Rock-Los Angeles-Louisville-Manchester-Miami-Milwaukee-Minneapolis-Nashville-New Orleans-New York-Newark-Oklahoma City-Omaha-Orange County-Orlando-Philadelphia-Phoenix-Portland-Portland Maine-Providence-Raleigh-Richmond-Sacramento-Salt Lake City-San Diego-San Francisco-San Luis Obispo-Santa Barbara-Seattle-St Louis-Tampa-Wichita-Wilmington-Calgary-Edmonton-Montreal-Ottawa-Toronto-Vancouver-Pros By City
-      </p>
-      <hr>
-
-      <div class="row">
-        <div class="col-lg-3" style="text-align: left">
-          <div class="site-footer__logo">
-            <a href="index.html">
-              <h1 class="screen-reader-text">Buildngz</h1>
-              <img src="{% static 'images/buildngz-logo-wh.png' %}" alt="Listiry">
-            </a>
-          </div>
-
-          <p class="t-small">Buildngz is making finding commercial real estate services and products faster, easier, and customized for you.</p>
-        </div><!-- .col -->
-
-        <div class="col-lg-2" style="text-align: left">
-        </div><!-- .col -->
-
-        <div class="col-lg-2" style="text-align: left">
-          <strong>COMPANY</strong>
-          <ul class="min-list site-footer__links">
-            <li><a href="#">About Buildngz</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Terms & Policies</a></li>
-            <li><a href="blog.html">Copyright Info</a></li>
-            <li><a href="blog.html">Mobile App</a></li>
-          </ul><!-- .main-navigation -->
-        </div><!-- .col -->
-
-        <div class="col-lg-2" style="text-align: left">
-          <strong>BUSINESS SERVICES</strong>
-          <ul class="min-list site-footer__links">
-            <li><a href="#">About Buildngz</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Terms & Policies</a></li>
-            <li><a href="blog.html">Copyright Info</a></li>
-            <li><a href="blog.html">Mobile App</a></li>
-          </ul><!-- .main-navigation -->
-        </div><!-- .col -->
-
-        <div class="col-lg-2" style="text-align: left">
-          <strong>GET HELP</strong>
-          <ul class="min-list site-footer__links">
-            <li><a href="#">About Buildngz</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Terms & Policies</a></li>
-            <li><a href="blog.html">Copyright Info</a></li>
-            <li><a href="blog.html">Mobile App</a></li>
-          </ul><!-- .main-navigation -->
-        </div><!-- .col -->
-
-
-      </div><!-- .row -->
-
-      <ul class="min-list inline-list site-footer__links site-footer__social">
-        <li>
-          <a href="#">
-            <i class="fa fa-facebook-f"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fa fa-pinterest"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fa fa-google-plus"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fa fa-instagram"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="fa fa-youtube"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- .site-footer__primary -->
-
-  <div class="site-footer__secondary">
-    <div class="container">
-      <div class="site-footer__secondary-wrapper">
-        <p class="site-footer__copyright">&copy; 2020
-          <span class="c-secondary">Buildngz</span>  All Rights Reserved.</p>
-        <ul class="min-list inline-list site-footer__links site-footer__details">
-          <li>
-            <a href="tel:+0987654321"><strong><i class="fa fa-phone"></i> (866) BUILDNGZ</strong> </a>
-          </li>
-          <li>
-            <a href="#">Get Free Demo</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- .site-footer__secondary -->
-</footer><!-- #colophone -->
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDyCxHyc8z9gMA5IlipXpt0c33Ajzqix4"></script>
-  <script src="https://cdn.rawgit.com/googlemaps/v3-utility-library/master/infobox/src/infobox.js"></script>
-  <script src="{% static 'scripts/app.js' %}"></script>
-
-</body>
-</html>
+{% endblock %}
