--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -72,7 +72,7 @@
               </ul><!-- .main-navigation -->
           
             <div class="user-action">
-            <a href="#" class="sign-in">
+            <a href="{% url 'login' %}" class="sign-in">
                 <i class="fa fa-user"></i>
                 <b>Sign in</b>
             </a>
