--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -17,7 +17,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="hero-static col-md-6 col-xl-4 d-flex align-items-center bg-white invisible" data-toggle="appear" data-class="animated fadeInRight">
+                <div class="hero-static col-md-6 col-xl-4 d-flex align-items-center bg-white invisible" data-toggle="appear" >
                     <div class="content content-full">
                         <!-- Header -->
                         <div class="px-30 py-30">
@@ -68,7 +68,7 @@
                                 </div>
                             </div>
                         </form>
-      <!-- END Sign In Form -->
+                        <!-- END Sign In Form -->
                     </div>
                 </div>
             </div>
