--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <title>Buildngz</title>
     <link href="https://fonts.googleapis.com/css?family=lato:400,600" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/custom.css' %}">
     <link rel="stylesheet" href="{% static 'styles/codebase.css' %}">
     <script src="https://kit.fontawesome.com/04413a34db.js" crossorigin="anonymous"></script>
 </head>
