Vendor registration setup.

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load widget_tweaks %}
+
 {% block content%}
 <div id="page-container" class="main-content-boxed">
 
@@ -8,8 +9,8 @@
     <main id="main-container">
 
         <!-- Page Content -->
-        <div class="bg-image" style="background-image: url({% static 'images/uploads/photo26@2x.jpg' %});">
-            <div class="row mx-0 bg-black-op">
+        <div class="bg-image" style="background-image: url({% static 'images/uploads/office-building-3.jpg' %});">
+            <div class="row mx-0 ">
                 <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-center">
                     <div class="p-30 invisible" data-toggle="appear">
                         <p class="font-size-h1 font-w600 text-white">
