--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -16,7 +16,7 @@
             <div class="site-footer__logo">
               <a href="index.html">
                 <h1 class="screen-reader-text">Buildngz</h1>
-                <img src="{% static 'images/buildngz-logo-wh.png' %}" alt="Listiry">
+                <img src="{% static 'images/buildngz-2-wh.png' %}" alt="Listiry">
               </a>
             </div>
   
