--- a/buildngz_main/static/styles/custom.css
+++ b/buildngz_main/static/styles/custom.css
@@ -1,13 +1,13 @@
 @keyframes show-toast{
     0% {top: -100%}
-    20% {top: 100px}
-    80% {top: 100px}
+    20% {top: 0px}
+    80% {top: 0px}
     100% {top: -100%}
 }
 .show-notifications{
     position: fixed;
     top: 100%;
     right: 20px;
-    animation-name: show-toast;
+    /* animation-name: show-toast; */
     animation-duration: 5s;
 }
