--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -7,8 +7,8 @@
         <!-- Main Container -->
         <main id="main-container">
             <!-- Page Content -->
-            <div class="bg-image" style="background-image: url({% static 'images/uploads/photo26@2x.jpg' %});">
-                <div class="row mx-0 bg-black-op">
+            <div class="bg-image" style="background-image: url({% static 'images/uploads/office-building-3.jpg' %});">
+                <div class="row mx-0">
                     <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-center">
                         <div class="p-30 invisible" data-toggle="appear">
                             <p class="font-size-h1 font-w600 text-white mb-5">
