--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -10,20 +10,25 @@
             <main id="main-container">
 
               <!-- Page Content -->
-              <div class="bg-image" style="background-image: url({% static 'images/uploads/photo26@2x.jpg' %});">
+              <div class="bg-image" style="background-image: url({% static 'images/uploads/electrical-system-installation.jpg' %});">
                   <div class="row mx-0 bg-black-op">
-                      <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-center">
-                          <div class="p-30 invisible" data-toggle="appear">
-                              <p class="font-size-h1 font-w600 text-white mb-5">
-                                  We're very happy you are joining our community!
-                              </p>
-                              <p class="font-size-h5 text-white">
-                                  <i class="fa fa-angles-right"></i> Create your account today and receive 50% off.
-                              </p>
-2                          </div>
-                      </div>
+                    <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-center">
+                        <div class="p-30 invisible" data-toggle="appear">
+                            <p class="font-size-h1 font-w600 text-white mb-5">
+                                We're very happy you are joining our community!
+                            </p>
+                            <p class="font-size-h5 text-white">
+                                <i class="fa fa-angles-right"></i> Create your account today and receive 50% off.
+                            </p>
+                        </div>
+                    </div>
                       <div class="hero-static col-md-6 col-xl-4 d-flex align-items-center bg-white">
                           <div class="content content-full">
+                            <!-- Error Messages -->
+                                <!-- LOAD MESSAGES -->
+                                {% include 'includes/alerts.html' %}
+                             <!-- END Error Messages -->
+
                               <!-- Header -->
                               <div class="px-30 py-10">
                                   <h1 class="h3 font-w700 mt-30 mb-10">One simple solution for contractors and design pros</h1>
@@ -34,7 +39,7 @@
                               <!-- Sign Up Form -->
                               <!-- jQuery Validation functionality is initialized with .js-validation-signup class in js/pages/op_auth_signup.min.js which was auto compiled from _es6/pages/op_auth_signup.js -->
                               <!-- For more examples you can check out https://github.com/jzaefferer/jquery-validation -->
-                              <form class="js-validation-signup px-30" action="be_pages_auth_all.html" method="post">
+                              <form action="{% url 'registerVendor' %}" method="post" class="js-validation-signup px-30" enctype="multipart/form-data">
                                 {% csrf_token %}
 
                                 <div class="form-group row">
@@ -53,13 +58,36 @@
                                     </div>
                                 </div>
                                 <div class="form-group row">
+                                    <div class="col-12">
+                                        <div class="form-material floating">
+                                          {% render_field v_form.vendor_name class="form-control" placeholder='Company Name' %}
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-12">
+                                        <div class="form-material floating">
+                                          {% render_field v_form.insurance_cert class="form-control" placeholder=v_form.insurance_cert.label %}
+                                          <small>Please upload a copy of your Certificate or Insurance</small>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
                                   <div class="col-12">
                                       <div class="form-material floating">
-                                        {% render_field form.email class="form-control" placeholder=form.email.label %}
+                                        {% render_field form.username class="form-control" placeholder=form.username.label %}
                                       </div>
                                   </div>
                               </div>
                               <div class="form-group row">
+                                <div class="col-12">
+                                    <div class="form-material floating">
+                                      {% render_field form.email class="form-control" placeholder=form.email.label %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
                                     <div class="col-12">
                                         <div class="form-material floating">
                                           {% render_field form.password class="form-control" placeholder="Password" %}
@@ -74,7 +102,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group row">
+                                  <div class="form-group row">
                                     <div class="col-12">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox" class="custom-control-input" id="signup-terms" name="signup-terms">
