--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,7 +6,7 @@
       <div class="d-lg-flex align-items-lg-center">
         <div class="site-header__logo">
           <a href="{% url 'home' %}">
-            <img src="{% static 'images/buildngz.png' %}" alt="Listiry">
+            <img src="{% static 'images/buildngz-2.png' %}" alt="Listiry">
           </a>
         </div><!-- .site-header__logo -->
   
@@ -79,7 +79,7 @@
             <a href="{% url 'registerUser' %}" class="sign-in">
                 <button class="button button--small button--pill button--primary d-none d-lg-inline-block"><i class="fa fa-user-plus"></i> Register</button>
             </a>
-            <a href="#" class="sign-in">
+            <a href="{% url 'registerVendor' %}" class="sign-in">
                 <button class="button button--small button--pill button--primary d-none d-lg-inline-block"><i class="fa-solid fa-helmet-safety"></i> Register Pro</button>
             </a>
             </div><!-- .user-action -->
