--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,6 +22,11 @@
                     <div class="content content-full">
                         <!-- Header -->
                         <div class="px-30 py-30">
+                            <!-- Error Messages -->
+                            <!-- LOAD MESSAGES -->
+                            {% include 'includes/alerts.html' %}
+                             <!-- END Error Messages -->
+
                             <h1 class="h3 font-w700 mt-30 mb-10">Buildngz Login</h1>
                             <!-- <h2 class="h5 font-w400 text-muted mb-0">Please sign in</h2> -->
                         </div>
@@ -30,20 +35,19 @@
                         <!-- Sign In Form -->
                         <!-- jQuery Validation functionality is initialized with .js-validation-signin class in js/pages/op_auth_signin.min.js which was auto compiled from _es6/pages/op_auth_signin.js -->
                         <!-- For more examples you can check out https://github.com/jzaefferer/jquery-validation -->
-                        <form class="js-validation-signin px-30" action="be_pages_auth_all.html" method="post">
+                        <form action="{% url 'login' %}" method="post" class="js-validation-signin px-30">
+                            {% csrf_token %}
                             <div class="form-group row">
                                 <div class="col-12">
                                     <div class="form-material floating">
-                                        <input type="text" class="form-control" id="login-username" name="login-username">
-                                        <label for="login-username">Username</label>
+                                        <input class="form-control" type="email" name="email" placeholder="Enter your email address">
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <div class="col-12">
                                     <div class="form-material floating">
-                                        <input type="password" class="form-control" id="login-password" name="login-password">
-                                        <label for="login-password">Password</label>
+                                        <input class="form-control" type="password" name="password" placeholder="Enter your password">
                                     </div>
                                 </div>
                             </div>
@@ -56,9 +60,8 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-sm btn-hero btn-alt-primary">
+                                <input type="submit" class="btn btn-sm btn-hero btn-alt-primary">
                                     <i class="si si-login mr-10"></i> Sign In
-                                </button>
                                 <div class="mt-30">
                                     <a class="link-effect text-muted mr-10 mb-5 d-inline-block" href="{% url 'registerUser' %}">
                                         <i class="fa fa-plus mr-5"></i> Create Account
