--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,7 +6,7 @@
       <div class="d-lg-flex align-items-lg-center">
         <div class="site-header__logo">
           <a href="{% url 'home' %}">
-            <img src="{% static 'images/buildngz-2.png' %}" alt="Listiry">
+            <img src="{% static 'images/buildngz-logo-1.png' %}" alt="Listiry">
           </a>
         </div><!-- .site-header__logo -->
   
@@ -69,20 +69,28 @@
                 <li>
                   <a href="blog.html"><b>BLOG</b></a>
                 </li>
-              </ul><!-- .main-navigation -->
-          
-            <div class="user-action">
-            <a href="{% url 'login' %}" class="sign-in">
+            </ul><!-- .main-navigation -->
+
+          <div class="user-action">
+            {% if user.is_authenticated %}
+              <a href="{% url 'logout' %}" class="logout">
                 <i class="fa fa-user"></i>
-                <b>Sign in</b>
-            </a>
-            <a href="{% url 'registerUser' %}" class="sign-in">
-                <button class="button button--small button--pill button--primary d-none d-lg-inline-block"><i class="fa fa-user-plus"></i> Register</button>
-            </a>
-            <a href="{% url 'registerVendor' %}" class="sign-in">
-                <button class="button button--small button--pill button--primary d-none d-lg-inline-block"><i class="fa-solid fa-helmet-safety"></i> Register Pro</button>
-            </a>
-            </div><!-- .user-action -->
+                <b>Log out</b>
+              </a>
+
+            {% else %}
+              <a href="{% url 'login' %}" class="sign-in">
+                  <i class="fa fa-user"></i>
+                  <b>Sign in</b>
+              </a>
+              <a href="{% url 'registerUser' %}" class="sign-in">
+                  <button class="button button--small button--pill button--primary d-none d-lg-inline-block"><i class="fa fa-user-plus"></i> Register</button>
+              </a>
+              <a href="{% url 'registerVendor' %}" class="sign-in">
+                  <button class="button button--small button--pill button--primary d-none d-lg-inline-block"><i class="fa-solid fa-helmet-safety"></i> Register Pro</button>
+              </a>
+            {% endif %}
+          </div><!-- .user-action -->
         </div>
     
         <div class="d-lg-none nav-mobile">
