--- a/buildngz_main/static/styles/style.css
+++ b/buildngz_main/static/styles/style.css
@@ -2821,6 +2821,11 @@ textarea {
   cursor: pointer;
 }
 
+.button--danger {
+  background-color: #ef0000;
+  color: #ffffff;
+}
+
 .button--primary {
   background-color: #00aeef;
   color: #ffffff;
