--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -2822,6 +2822,11 @@ textarea {
   cursor: pointer;
 }
 
+.button--danger {
+  background-color: #ef0000;
+  color: #ffffff;
+}
+
 .button--primary {
   background-color: #00aeef;
   color: #ffffff;
