Email configuration changes.

--- a/templates/accounts/customerDashboard.html
+++ b/templates/accounts/customerDashboard.html
@@ -57,8 +57,8 @@
                 {% include 'includes/alerts.html' %}
                  <!-- END Error Messages -->
 
-                <h6 class="h4 font-w500 mt-30 mb-10">Welcome {{user.first_name}} {{user.last_name}}</h6>
-                <p>{{user.get_role}} Desktop</p>
+                <p class="pull-right">Welcome {{user.first_name}} {{user.last_name}}</p>
+                <h6 class="h4 font-w500 mt-30 mb-10">{{user.get_role}} Desktop</h6>
                 <!-- <h2 class="h5 font-w400 text-muted mb-0">Please sign in</h2> -->
             </div>
 
