Forgot password functionality along with email sending and password validation.

--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -27,15 +27,15 @@
                             {% include 'includes/alerts.html' %}
                              <!-- END Error Messages -->
 
-                            <h1 class="h2 font-w400 mt-30 mb-10">Buildngz Login</h1>
-                            <!-- <h2 class="h5 font-w400 text-muted mb-0">Please sign in</h2> -->
+                            <h1 class="h3 font-w400 mt-30 mb-10">Forgot your password?</h1>
+                            <h2 class="h5 font-w400 text-muted mb-0">Please enter your email address and we'll send you a link to reset your password.</h2>
                         </div>
                         <!-- END Header -->
 
                         <!-- Sign In Form -->
                         <!-- jQuery Validation functionality is initialized with .js-validation-signin class in js/pages/op_auth_signin.min.js which was auto compiled from _es6/pages/op_auth_signin.js -->
                         <!-- For more examples you can check out https://github.com/jzaefferer/jquery-validation -->
-                        <form action="{% url 'login' %}" method="post" class="js-validation-signin px-30">
+                        <form action="{% url 'forgot_password' %}" method="post" class="js-validation-signin px-30">
                             {% csrf_token %}
                             <div class="form-group row">
                                 <div class="col-12">
@@ -44,32 +44,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group row">
-                                <div class="col-12">
-                                    <div class="form-material floating">
-                                        <input class="form-control" type="password" name="password" placeholder="Enter your password">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-12">
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="login-remember-me" name="login-remember-me">
-                                        <label class="custom-control-label" for="login-remember-me">Remember Me</label>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="form-group">
-                                <input type="submit" value="Sign In" class="btn btn-sm btn-hero btn-alt-primary">
-                                    
-                                <div class="mt-30">
-                                    <a class="link-effect text-muted mr-10 mb-5 d-inline-block" href="{% url 'forgot_password' %}">
-                                        <i class="fa-solid fa-lock mr-5"></i> Forgot Password?
-                                    </a>
-                                    <a class="link-effect text-muted mr-10 mb-5 d-inline-block" href="{% url 'registerUser' %}">
-                                        <i class="fa fa-user-plus mr-5"></i> Create Account
-                                    </a>
-                                </div>
+                                <input type="submit" value="Continue" class="btn btn-sm btn-hero btn-alt-primary">
                             </div>
                         </form>
                         <!-- END Sign In Form -->
