--- a/templates/accounts/registerUser.html
+++ b/templates/accounts/registerUser.html
@@ -28,7 +28,7 @@
 
                             <!-- Header -->
                             <div class="px-30">
-                                <h1 class="h3 font-w700 mt-30 mb-10">Welcome to Buildngz</h1>
+                                <h1 class="h2 font-w400 mt-30 mb-10">Welcome to Buildngz</h1>
                                 <h2 class="h5 font-w400 text-muted mb-0">The new way to design your commercial project</h2>
                             </div>
                             <!-- END Header -->
@@ -91,7 +91,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Sign-up Free" class="btn btn-sm btn-hero btn-primary">
+                                    <input type="submit" value="Sign-up Free" class="btn btn-sm btn-hero btn-alt-primary">
                                     <div class="mt-30">
                                         <a class="link-effect text-muted mr-10 mb-5 d-inline-block" href="#" data-toggle="modal" data-target="#modal-terms">
                                             <i class="fa fa-book text-muted mr-5"></i> Read Terms
