--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -31,7 +31,7 @@
 
                               <!-- Header -->
                               <div class="px-30 py-10">
-                                  <h1 class="h3 font-w700 mt-30 mb-10">One simple solution for contractors and design pros</h1>
+                                  <h1 class="h2 font-w400 mt-30 mb-10">One simple solution for contractors and design pros</h1>
                                   <h2 class="h5 font-w400 text-muted mb-0">Attract and win better clients, run profitable projects and deliver a standout customer experience - all in one place.</h5>
                               </div>
                               <!-- END Header -->
@@ -111,7 +111,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-sm btn-hero btn-primary">
+                                    <button type="submit" class="btn btn-sm btn-hero btn-alt-primary">
                                         <i class="fa fa-plus mr-10"></i> Create Free Pro Account
                                     </button>
                                     <div class="mt-30">
