--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,7 +3,8 @@
 <header id="masthead" class="site-header site-header--layout-2 site-header--fluid">
   
     <div class="d-lg-flex justify-content-lg-between align-items-lg-center site-header__container">
-      <div class="d-lg-flex align-items-lg-center">
+      <!-- Error Messages -->
+      
         <div class="site-header__logo">
           <a href="{% url 'home' %}">
             <img src="{% static 'images/buildngz-logo-1.png' %}" alt="Listiry">
