More vendor work, including context processors and other vendor pages.

--- a/templates/v_base.html
+++ b/templates/v_base.html
@@ -21,10 +21,12 @@
         <link href="{% static 'vendor/styles/icons.min.css' %}" rel="stylesheet" type="text/css" />
         <!-- App Css-->
         <link href="{% static 'vendor/styles/app.min.css' %}" id="app-style" rel="stylesheet" type="text/css" />
+        <link href="{% static 'vendor/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'vendor/libs/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css' %}" rel="stylesheet" type="text/css" />
 
     </head>
 
-    <body data-topbar="light">
+    <body data-topbar="light" >
 
 
         <!-- LOAD NAVBAR -->
@@ -80,6 +82,27 @@
         <script src="{% static 'vendor/scripts/pages/dashboard.init.js' %}"></script>
 
         <script src="{% static 'vendor/scripts/app.js' %}"></script>
+
+        <!-- Required datatable js -->
+        <script src="{% static 'vendor/libs/datatables.net/js/jquery.dataTables.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/datatables.net-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
+        <!-- Buttons examples -->
+        <script src="{% static 'vendor/libs/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/jszip/jszip.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/pdfmake/build/pdfmake.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/pdfmake/build/vfs_fonts.js' %}"></script>
+        <script src="{% static 'vendor/libs/datatables.net-buttons/js/buttons.html5.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/datatables.net-buttons/js/buttons.print.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/datatables.net-buttons/js/buttons.colVis.min.js' %}"></script>
+        <!-- Responsive examples -->
+        <script src="{% static 'vendor/libs/datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>
+        <script src="{% static 'vendor/libs/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js' %}"></script>
+
+        <!-- Datatable init js -->
+        <script src="{% static 'vendor/scripts/pages/datatables.init.js' %}"></script>
+        <!-- Peity chart-->
+        <script src="assets/libs/peity/jquery.peity.min.js"></script>
 
     </body>
 </html>
