--- a/templates/includes/v_header.html
+++ b/templates/includes/v_header.html
@@ -5,21 +5,21 @@
       <div class="d-flex">
           <!-- LOGO -->
           <div class="navbar-brand-box">
-              <a href="index.html" class="logo logo-dark">
+              <a href="{% url 'vendorDashboard' %}" class="logo logo-dark">
                   <span class="logo-sm">
-                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="22">
+                      <img src="{% static 'images/buildngz-sm-logo.png' %}" alt="" height="22">
                   </span>
                   <span class="logo-lg">
-                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="17">
+                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="28">
                   </span>
               </a>
 
-              <a href="index.html" class="logo logo-light">
+              <a href="{% url 'vendorDashboard' %}" class="logo logo-light">
                   <span class="logo-sm">
-                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="22">
+                      <img src="{% static 'images/buildngz-sm-logo.png' %}" alt="" height="22">
                   </span>
                   <span class="logo-lg">
-                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="17">
+                      <img src="{% static 'images/buildngz-logo-1.png' %}" alt="" height="28">
                   </span>
               </a>
           </div>
@@ -95,141 +95,113 @@
               </div>
           </div>
 
-          <div class="dropdown d-none d-md-block">
-              <button type="button" class="btn header-item waves-effect" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                 <img class="mr-2" src="{% static 'vendor/images/flags/us.jpg' %}" alt="Header Language" height="16">  English   <span class="mdi mdi-chevron-down"> </span>
-              </button>
-              <div class="dropdown-menu dropdown-menu-right">
-
-                  <!-- item-->
-                  <a href="javascript:void(0);" class="dropdown-item notify-item">
-                      <img src="{% static 'vendor/images/flags/germany.jpg' %}" alt="user-image" class="mr-1" height="12"> <span class="align-middle"> German </span>
-                  </a>
-
-                  <!-- item-->
-                  <a href="javascript:void(0);" class="dropdown-item notify-item">
-                      <img src="{% static 'vendor/images/flags/italy.jpg' %}" alt="user-image" class="mr-1" height="12"> <span class="align-middle"> Italian </span>
-                  </a>
-
-                  <!-- item-->
-                  <a href="javascript:void(0);" class="dropdown-item notify-item">
-                      <img src="{% static 'vendor/images/flags/french.jpg' %}" alt="user-image" class="mr-1" height="12"> <span class="align-middle"> French </span>
-                  </a>
-
-                  <!-- item-->
-                  <a href="javascript:void(0);" class="dropdown-item notify-item">
-                      <img src="{% static 'vendor/images/flags/spain.jpg' %}" alt="user-image" class="mr-1" height="12"> <span class="align-middle"> Spanish </span>
-                  </a>
-
-                  <!-- item-->
-                  <a href="javascript:void(0);" class="dropdown-item notify-item">
-                      <img src="{% static 'vendor/images/flags/russia.jpg' %}" alt="user-image" class="mr-1" height="12"> <span class="align-middle"> Russian </span>
-                  </a>
-              </div>
-          </div>
-
-
           <div class="dropdown d-inline-block">
-              <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="mdi mdi-bell-outline"></i>
-                  <span class="badge badge-danger badge-pill">2</span>
-              </button>
-              <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right p-0"
-                  aria-labelledby="page-header-notifications-dropdown">
-                  <div class="p-3">
-                     <h6 class="m-0">Notifications (258) </h6>
-                  </div>
-      
-                  <div data-simplebar style="max-height: 230px;">
-                      <a href="" class="text-reset notification-item">
-                          <div class="media">
-                              <div class="avatar-xs mr-3">
-                                  <span class="avatar-title bg-primary rounded-circle font-size-16">
-                                      <i class="mdi mdi-cart-outline"></i>
-                                  </span>
-                              </div>
-                              <div class="media-body">
-                                  <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
-                                  <div class="text-muted">
-                                      <p class="mb-1 font-size-12">Dummy text of the printing and typesetting industry.</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </a>
+            <button type="button" class="btn header-item noti-icon"
+                id="page-header-notifications-dropdown" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="mdi mdi-bell-outline"></i>
+                <span class="badge badge-danger badge-pill">5</span>
+            </button>
+            <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right p-0"
+                aria-labelledby="page-header-notifications-dropdown">
+                <div class="p-3">
+                    <h6 class="m-0">Notifications (5) </h6>
+                </div>
 
-                      <a href="" class="text-reset notification-item">
-                          <div class="media">
-                              <div class="avatar-xs mr-3">
-                                  <span class="avatar-title bg-warning rounded-circle font-size-16">
-                                      <i class="mdi mdi-message"></i>
-                                  </span>
-                              </div>
-                              <div class="media-body">
-                                  <h6 class="mt-0 mb-1 font-size-15">New Message received</h6>
-                                  <div class="text-muted">
-                                      <p class="mb-1 font-size-12">You have 87 unread messages</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </a>
+                <div data-simplebar style="max-height: 230px;">
+                    <a href="" class="text-reset notification-item">
+                        <div class="media">
+                            <div class="avatar-xs mr-3">
+                                <span class="avatar-title bg-primary rounded-circle font-size-16">
+                                    <i class="mdi mdi-cart-outline"></i>
+                                </span>
+                            </div>
+                            <div class="media-body">
+                                <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
+                                <div class="text-muted">
+                                    <p class="mb-1 font-size-12">Dummy text of the printing and typesetting
+                                        industry.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                      <a href="" class="text-reset notification-item">
-                          <div class="media">
-                              <div class="avatar-xs mr-3">
-                                  <span class="avatar-title bg-info rounded-circle font-size-16">
-                                      <i class="mdi mdi-help"></i>
-                                  </span>
-                              </div>
-                              <div class="media-body">
-                                  <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
-                                  <div class="text-muted">
-                                      <p class="mb-1 font-size-12">It is a long established fact that a reader will</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </a>
+                    <a href="" class="text-reset notification-item">
+                        <div class="media">
+                            <div class="avatar-xs mr-3">
+                                <span class="avatar-title bg-warning rounded-circle font-size-16">
+                                    <i class="mdi mdi-message"></i>
+                                </span>
+                            </div>
+                            <div class="media-body">
+                                <h6 class="mt-0 mb-1 font-size-15">New Message received</h6>
+                                <div class="text-muted">
+                                    <p class="mb-1 font-size-12">You have 87 unread messages</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                      <a href="" class="text-reset notification-item">
-                          <div class="media">
-                              <div class="avatar-xs mr-3">
-                                  <span class="avatar-title bg-primary rounded-circle font-size-16">
-                                      <i class="mdi mdi-cart-outline"></i>
-                                  </span>
-                              </div>
-                              <div class="media-body">
-                                  <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
-                                  <div class="text-muted">
-                                      <p class="mb-1 font-size-12">Dummy text of the printing and typesetting industry.</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </a>
+                    <a href="" class="text-reset notification-item">
+                        <div class="media">
+                            <div class="avatar-xs mr-3">
+                                <span class="avatar-title bg-info rounded-circle font-size-16">
+                                    <i class="mdi mdi-martini"></i>
+                                </span>
+                            </div>
+                            <div class="media-body">
+                                <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
+                                <div class="text-muted">
+                                    <p class="mb-1 font-size-12">It is a long established fact that a reader will
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                      <a href="" class="text-reset notification-item">
-                          <div class="media">
-                              <div class="avatar-xs mr-3">
-                                  <span class="avatar-title bg-danger rounded-circle font-size-16">
-                                      <i class="mdi mdi-cart-outline"></i>
-                                  </span>
-                              </div>
-                              <div class="media-body">
-                                  <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
-                                  <div class="text-muted">
-                                      <p class="mb-1 font-size-12">Dummy text of the printing and typesetting industry.</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </a>
+                    <a href="" class="text-reset notification-item">
+                        <div class="media">
+                            <div class="avatar-xs mr-3">
+                                <span class="avatar-title bg-primary rounded-circle font-size-16">
+                                    <i class="mdi mdi-cart-outline"></i>
+                                </span>
+                            </div>
+                            <div class="media-body">
+                                <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
+                                <div class="text-muted">
+                                    <p class="mb-1 font-size-12">Dummy text of the printing and typesetting
+                                        industry.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                  </div>
-                  <div class="p-2 border-top">
-                      <a class="btn btn-sm btn-link font-size-14 btn-block text-center" href="javascript:void(0)">
-                          <i class="mdi mdi-arrow-right-circle mr-1"></i> View all
-                      </a>
-                  </div>
-              </div>
-          </div>
+                    <a href="" class="text-reset notification-item">
+                        <div class="media">
+                            <div class="avatar-xs mr-3">
+                                <span class="avatar-title bg-danger rounded-circle font-size-16">
+                                    <i class="mdi mdi-cart-outline"></i>
+                                </span>
+                            </div>
+                            <div class="media-body">
+                                <h6 class="mt-0 mb-1 font-size-15">Your order is placed</h6>
+                                <div class="text-muted">
+                                    <p class="mb-1 font-size-12">Dummy text of the printing and typesetting
+                                        industry.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="p-2 border-top">
+                    <a class="btn btn-sm btn-link font-size-14 btn-block text-center" href="javascript:void(0)">
+                        <i class="mdi mdi-arrow-right-circle mr-1"></i> View all
+                    </a>
+                </div>
+            </div>
+        </div>
+
 
           <div class="dropdown d-none d-lg-inline-block ml-1">
               <!-- <button type="button" class="btn header-item noti-icon waves-effect" data-toggle="fullscreen">
@@ -240,14 +212,14 @@
           <div class="dropdown d-inline-block">
               <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img class="rounded-circle header-profile-user" src="{% static 'vendor/images/users/user-1.jpg' %}"
+                  <img class="rounded-circle header-profile-user" src="{{ vendor.user_profile.profile_picture.url }}"
                       alt="Header Avatar">
                   <span class="d-none d-xl-inline-block ml-1">{{user.first_name}}</span>
                   <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
               </button>
               <div class="dropdown-menu dropdown-menu-right">
                   <!-- item-->
-                  <a class="dropdown-item" href="#"><i class="dripicons-user d-inlne-block text-muted mr-2"></i> Profile</a>
+                  <a class="dropdown-item" href="{% url 'vendorProfile' %}"><i class="dripicons-user d-inlne-block text-muted mr-2"></i> Profile</a>
                   <a class="dropdown-item" href="#"><i class="dripicons-wallet d-inlne-block text-muted mr-2"></i> My Wallet</a>
                   <a class="dropdown-item d-block" href="#"><i class="dripicons-gear d-inlne-block text-muted mr-2"></i> Settings</a>
                   <a class="dropdown-item" href="#"><i class="dripicons-lock d-inlne-block text-muted mr-2"></i> Lock screen</a>
