--- a/templates/includes/v_header.html
+++ b/templates/includes/v_header.html
@@ -222,7 +222,7 @@
                   <a class="dropdown-item" href="{% url 'vendorProfile' %}"><i class="dripicons-user d-inlne-block text-muted mr-2"></i> Profile</a>
                   <a class="dropdown-item" href="#"><i class="dripicons-wallet d-inlne-block text-muted mr-2"></i> My Wallet</a>
                   <a class="dropdown-item d-block" href="#"><i class="dripicons-gear d-inlne-block text-muted mr-2"></i> Settings</a>
-                  <a class="dropdown-item" href="#"><i class="dripicons-lock d-inlne-block text-muted mr-2"></i> Lock screen</a>
+                  <a class="dropdown-item" href="{% url 'lockScreen' %}"><i class="dripicons-lock d-inlne-block text-muted mr-2"></i> Lock screen</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}"><i class="dripicons-exit d-inlne-block text-muted mr-2"></i> Logout</a>
               </div>
