--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="{% static 'styles/codebase.css' %}">
     <script src="https://kit.fontawesome.com/04413a34db.js" crossorigin="anonymous"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-    
+    <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutocomplete" async defer></script>
+    <script src="{% static 'scripts/custom.js' %}"></script>
 </head>
 
 <body>
