CRUD for categories and mostly for products.

--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -40,9 +40,9 @@
                 </li>
 
                 <li>
-                    <a href="vendorListing" class=" waves-effect">
-                        <i class="mdi mdi-clipboard-list-outline"></i>
-                        <span>Business Listing</span>
+                    <a href="{% url 'menuBuilder' %}" class=" waves-effect">
+                        <i class="mdi mdi-cart-arrow-right"></i>
+                        <span>Menu Builder</span>
                     </a>
                 </li>
 
