--- a/templates/v_base.html
+++ b/templates/v_base.html
@@ -15,6 +15,7 @@
 
         <!-- <link href="{% static 'styles/style.css' %}" rel="stylesheet" type="text/css" /> -->
         <link href="{% static 'vendor/styles/MetroJs.Full/MetroJs.min.css' %}" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Arial:400,600" rel="stylesheet">
 
         <!-- Bootstrap Css -->
         <link href="{% static 'vendor/styles/bootstrap.min.css' %}" id="bootstrap-style" rel="stylesheet" type="text/css" />
