--- a/templates/includes/v_header.html
+++ b/templates/includes/v_header.html
@@ -24,9 +24,9 @@
               </a>
           </div>
 
-          <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect" id="vertical-menu-btn">
+          <!-- <button type="button" class="btn btn-sm px-3 font-size-24 header-item waves-effect" id="vertical-menu-btn">
               <i class="mdi mdi-menu"></i>
-          </button>
+          </button> -->
 
           <div class="d-none d-sm-block ml-1">
               <div class="dropdown">
@@ -212,7 +212,7 @@
           <div class="dropdown d-inline-block">
               <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img class="rounded-circle header-profile-user" src="{{ vendor.user_profile.profile_picture.url }}"
+                  <img class="rounded-circle header-profile-user" src="{% if vendor.user_profile.profile_picture %}{{ vendor.user_profile.profile_picture.url }}{% else %}{% static 'vendor/images/users/default-avatar.png' %}{% endif %}"
                       alt="Header Avatar">
                   <span class="d-none d-xl-inline-block ml-1">{{user.first_name}}</span>
                   <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
@@ -220,9 +220,7 @@
               <div class="dropdown-menu dropdown-menu-right">
                   <!-- item-->
                   <a class="dropdown-item" href="{% url 'vendorProfile' %}"><i class="dripicons-user d-inlne-block text-muted mr-2"></i> Profile</a>
-                  <a class="dropdown-item" href="#"><i class="dripicons-wallet d-inlne-block text-muted mr-2"></i> My Wallet</a>
-                  <a class="dropdown-item d-block" href="#"><i class="dripicons-gear d-inlne-block text-muted mr-2"></i> Settings</a>
-                  <a class="dropdown-item" href="{% url 'lockScreen' %}"><i class="dripicons-lock d-inlne-block text-muted mr-2"></i> Lock screen</a>
+                  <a class="dropdown-item d-block" href="{% url 'menuBuilder' %}"><i class="dripicons-gear d-inlne-block text-muted mr-2"></i> Settings</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'logout' %}"><i class="dripicons-exit d-inlne-block text-muted mr-2"></i> Logout</a>
               </div>
