--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!-- ========== Left Sidebar Start ========== -->
 <div class="vertical-menu">
 
@@ -41,10 +39,17 @@
 
                 <li>
                     <a href="{% url 'menuBuilder' %}" class=" waves-effect">
-                        <i class="mdi mdi-cart-arrow-right"></i>
+                        <i class="mdi mdi-clipboard-list-outline"></i>
                         <span>Menu Builder</span>
                     </a>
                 </li>
+                <li>
+                    <a href="vendorListing" class=" waves-effect">
+                        <i class="mdi mdi-clipboard-list-outline"></i>
+                        <span>Business Listing</span>
+                    </a>
+                </li>
+
 
                 <li>
                     <a href="{% url 'vendorListings' %}" class=" waves-effect">
